refactor: rename TinyClaw to borg across code, config, and scripts
Full rename of all functional references: source files, shell scripts,
Docker config, package.json, ignore files, hooks, dashboard, and MOTD.
Includes one-time .tinyclaw/ → .borg/ migration block in borg.sh.

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -746,7 +746,7 @@ tr.clickable { cursor: pointer; }
 <body>
 
 <div id="navbar">
-  <span class="brand">TinyClaw Dashboard</span>
+  <span class="brand">Borg Dashboard</span>
   <a href="#overview" data-view="overview">Overview</a>
   <a href="#feed" data-view="feed">Feed</a>
   <a href="#routing" data-view="routing">Routing</a>
